fixed some spacing issues

--- a/client/src/app/bandpage/bandpage.component.css
+++ b/client/src/app/bandpage/bandpage.component.css
@@ -78,7 +78,7 @@
     padding: 15px;
     margin: 7px 16px 16px 20px;
     border-radius: 5px;
-    width:100%;
+    width:95%;
     height: 180px;
     vertical-align: text-top;
 }
